<resources>
    <string name="app_name" translatable="false">RandomUI</string>

    <string name="oneNumber">One number</string>
    <string name="manyNumbers">Many numbers</string>
    <string name="coin">Coin</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>

    <string name="random">Random</string>
    <string name="minNum">Min number</string>
    <string name="maxNum">Max number</string>
    <string name="numberOfTimes">Number of times</string>
    <string name="flip">Flip</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>

    <string name="appearance">Appearance</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="another">Another</string>
    <string name="version">Version %1$s</string>
    <string name="settings_language_default_value">en</string>

    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>

    <string name="shareThanks">Thanks for sharing the app!</string>
    <string name="shareText">The app RandomUI is your helper with getting random numbers, you can download it from this link. Thank you :) </string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>