<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_one">

    <fragment
        android:id="@+id/nav_one"
        android:name="com.pandacorp.randomui.presentation.ui.fragment.RandomOneFragment"
        android:label="@string/oneNumber"
        tools:layout="@layout/fragment_random_one" />

    <fragment
        android:id="@+id/nav_coin"
        android:name="com.pandacorp.randomui.presentation.ui.fragment.RandomCoinFragment"
        android:label="@string/coin"
        tools:layout="@layout/fragment_random_coin" />

    <fragment
        android:id="@+id/nav_many"
        android:name="com.pandacorp.randomui.presentation.ui.fragment.RandomManyFragment"
        android:label="@string/manyNumbers"
        tools:layout="@layout/fragment_random_many" />

</navigation>